src/App.css
.Main-div {
  margin: 0;
  width: 100%;
  height: 100vh;
}

.Main-border-div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  --border-size: 75px;
  border: var(--border-size) solid transparent;
  border-image: url(./assets/images/pattern2.png) 33% round;
  height: calc(100% - 2 * var(--border-size));
  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
}

@media only screen and (max-width: 700px) {
  .Main-border-div {
    --border-size: 30px;
  }
}

